Bug 225733 - Cantor crashes on loading worksheet
Summary: Cantor crashes on loading worksheet
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Rieder
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-06 16:41 UTC by albert
Modified: 2016-10-25 03:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12
Sentry Crash Report:


Attachments
Cantor worksheet (8.31 KB, application/octet-stream)
2010-02-07 16:17 UTC, albert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description albert 2010-02-06 16:41:32 UTC
Application: cantor (0.1)
KDE Platform Version: 4.3.95 (KDE 4.3.95 (KDE 4.4 RC2))
Qt Version: 4.6.0
Operating System: Linux 2.6.31-17-generic i686
Distribution: Ubuntu 9.10

-- Information about the crash:
If I launch Cantor without a worksheet and then I load a saved one, Cantor shows the following message:
"Backend nullbackend is not installed"
when I press the "Ok" button, it crashes. 

The crash can be reproduced every time.

 -- Backtrace:
Application: Cantor (cantor), signal: Segmentation fault
[KCrash Handler]
#6  Worksheet::load (this=0x0, filename=...) at ../../../cantor/src/worksheet.cpp:655
#7  0x06d6833e in CantorPart::openFile (this=0x90d1b28) at ../../../cantor/src/cantor_part.cpp:214
#8  0x00502be9 in KParts::ReadOnlyPart::openUrl (this=0x90d1b28, url=...) at ../../kparts/part.cpp:557
#9  0x08051227 in CantorShell::load (this=0x8ab1bd0, url=...) at ../../../cantor/src/cantor.cpp:107
#10 0x08051daf in CantorShell::fileOpen (this=0x8ab1bd0) at ../../../cantor/src/cantor.cpp:203
#11 0x0805306b in CantorShell::qt_metacall (this=0x8ab1bd0, _c=QMetaObject::InvokeMetaMethod, _id=53, _a=0xbfcc3aa8) at ./cantor.moc:96
#12 0x082d611a in QMetaObject::metacall (object=0x8ab1bd0, cl=QMetaObject::ReadProperty, idx=53, argv=0xbfcc3aa8) at kernel/qmetaobject.cpp:237
#13 0x082e489b in QMetaObject::activate (sender=0x8ab5198, m=0x18afd98, local_signal_index=1, argv=0xbfcc3aa8) at kernel/qobject.cpp:3294
#14 0x00f89a39 in QAction::triggered (this=0x8ab5198, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#15 0x00f8bbac in QAction::activate (this=0x8ab5198, event=QAction::Trigger) at kernel/qaction.cpp:1245
#16 0x01479542 in QAction::trigger (this=0x8af0dc0) at ../../include/QtGui/../../src/gui/kernel/qaction.h:218
#17 QToolButton::nextCheckState (this=0x8af0dc0) at widgets/qtoolbutton.cpp:1147
#18 0x01397323 in QAbstractButtonPrivate::click (this=0x8bc15c8) at widgets/qabstractbutton.cpp:528
#19 0x01397611 in QAbstractButton::mouseReleaseEvent (this=0x8adf068, e=0xbfcc41a0) at widgets/qabstractbutton.cpp:1118
#20 0x01479a0c in QToolButton::mouseReleaseEvent (this=0x8adf068, e=0xbfcc41a0) at widgets/qtoolbutton.cpp:721
#21 0x00fecf9e in QWidget::event (this=0x8adf068, event=0xbfcc41a0) at kernel/qwidget.cpp:7974
#22 0x013963be in QAbstractButton::event (this=0x8adf068, e=0x8af0dc0) at widgets/qabstractbutton.cpp:1080
#23 0x0147c53a in QToolButton::event (this=0x8adf068, event=0xbfcc41a0) at widgets/qtoolbutton.cpp:1163
#24 0x00f9019c in QApplicationPrivate::notify_helper (this=0x8a14ff0, receiver=0x8adf068, e=0xbfcc41a0) at kernel/qapplication.cpp:4242
#25 0x00f9776b in QApplication::notify (this=0xbfcc4a58, receiver=0x8adf068, e=0xbfcc41a0) at kernel/qapplication.cpp:3822
#26 0x00c83a1a in KApplication::notify (this=0xbfcc4a58, receiver=0x8adf068, event=0xbfcc41a0) at ../../kdeui/kernel/kapplication.cpp:302
#27 0x082d0eab in QCoreApplication::notifyInternal (this=0xbfcc4a58, receiver=0x8adf068, event=0xbfcc41a0) at kernel/qcoreapplication.cpp:704
#28 0x00f9671f in QCoreApplication::sendEvent (receiver=0x8adf068, event=0xbfcc41a0, alienWidget=0x8adf068, nativeWidget=0x8ae4d80, buttonDown=0x18cb060, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QApplicationPrivate::sendMouseEvent (receiver=0x8adf068, event=0xbfcc41a0, alienWidget=0x8adf068, nativeWidget=0x8ae4d80, buttonDown=0x18cb060, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2956
#30 0x0101fd18 in QETWidget::translateMouseEvent (this=0x8ae4d80, event=0xbfcc46bc) at kernel/qapplication_x11.cpp:4368
#31 0x0101f1f1 in QApplication::x11ProcessEvent (this=0xbfcc4a58, event=0xbfcc46bc) at kernel/qapplication_x11.cpp:3379
#32 0x0104e04a in x11EventSourceDispatch (s=0x8a18200, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x05c06e88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#34 0x05c0a730 in ?? () from /lib/libglib-2.0.so.0
#35 0x05c0a863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#36 0x082fcbd5 in QEventDispatcherGlib::processEvents (this=0x8a00518, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#37 0x0104db75 in QGuiEventDispatcherGlib::processEvents (this=0x8a00518, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#38 0x082cf4c9 in QEventLoop::processEvents (this=0xbfcc49b4, flags=) at kernel/qeventloop.cpp:149
#39 0x082cf91a in QEventLoop::exec (this=0xbfcc49b4, flags=...) at kernel/qeventloop.cpp:201
#40 0x082d3b0f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#41 0x00f90237 in QApplication::exec () at kernel/qapplication.cpp:3570
#42 0x080501b7 in main (argc=5, argv=0xbfcc4bb4) at ../../../cantor/src/main.cpp:85

Reported using DrKonqi
Comment 1 Alexander Rieder 2010-02-06 23:19:51 UTC
loading and saving works fine here.
Could you share the file that causes the trouble?
Comment 2 albert 2010-02-07 16:17:27 UTC
Created attachment 40588 [details]
Cantor worksheet

That crash, on my system, happens loading every worksheet I tried, even with the simple one in attachment. I want to underline that to reproduce the crash I must load a worksheet when no other is present, therefore it happens when at start-up I chose "Cancel" on the dialog "Choose the Backend to use" or after I closed all the worksheets in the Cantor window.
Comment 3 Alexander Rieder 2010-02-07 16:44:07 UTC
it seems to work here.
Could you please do the following:
- run kdebugdialog and enable cantor there
- run cantor from a shell and trigger the error
- send me the output
Comment 4 albert 2010-02-07 17:34:04 UTC
The console output is:

cantor(5771)/kdecore (KSycoca) KSycocaPrivate::openDatabase: Trying to open ksycoca from  "/var/tmp/kdecache-raffaele/ksycoca4"                                                                                           
cantor(5771) SageBackend::SageBackend: Creating SageBackend                                                  
cantor(5771) NullBackend::NullBackend: Creating NullBackend                                                  
cantor(5771) MaximaBackend::MaximaBackend: Creating MaximaBackend                                            
cantor(5771)/kdeui (kdelibs) QWidgetStackAccelManager::currentChanged: invalid index provided                
cantor(5771)/kio (bookmarks) KBookmarkManager::KBookmarkManager: starting KDirWatch for  "/home/raffaele/.local/share//user-places.xbel"                                                                                  
cantor(5771)/kio (KDirListerCache) KDirListerCache::listDir: Listing directory: KUrl("trash:/")              
cantor(5771)/kdecore (services) KMimeTypeFactory::parseMagic: Now parsing  "/usr/share/mime/magic"           
cantor(5771)/kdecore (services) KMimeTypeFactory::parseMagic: Now parsing  "/home/raffaele/.local/share/mime/magic"                                                                                                       
cantor(5771)/kio (KDirListerCache) KDirListerCache::listDir: Entry currently being listed: KUrl("trash:/") by (KDirLister(0x9608738) )                                                                                    
cantor(5771)/kio (Slave) KIO::Slave::createSlave: createSlave "trash" for KUrl("trash:/")                    
cantor(5771)/kio (KIOConnection) KIO::ConnectionServer::listenForRemote: Listening on  "local:/tmp/ksocket-raffaele/cantornt5771.slave-socket"                                                                            
cantor(5771)/kio (Slave) KIO::Slave::createSlave: createSlave "file" for KUrl("file:///home/raffaele/Documenti")                                                                                                          
cantor(5771)/kio (KIOConnection) KIO::ConnectionServer::listenForRemote: Listening on  "local:/tmp/ksocket-raffaele/cantorGS5771.slave-socket"                                                                            
cantor(5771)/kio (KDirListerCache) KDirListerCache::listDir: Listing directory: KUrl("file:///home/raffaele/Documenti")                                                                                                   
cantor(5771)/kio (KDirListerCache) KDirListerCache::forgetDirs: Killing update job for  "file:///home/raffaele/Documenti"                                                                                                 
cantor(5771)/kio (KDirListerCache) KDirListerCache::listDir: Listing directory: KUrl("file:///home/raffaele/Documenti")                                                                                                   
cantor(5771)/kio (KDirListerCache) KDirListerCache::forgetDirs: Killing update job for  "file:///home/raffaele/Documenti"                                                                                                 
cantor(5771)/kio (KDirListerCache) KDirListerCache::listDir: Listing directory: KUrl("file:///home/raffaele/Documenti")                                                                                                   
cantor(5771)/kio (KDirListerCache) KDirListerCache::slotResult: finished listing KUrl("trash:/")             
cantor(5771)/kio KNFSShare::KNFSSharePrivate::findExportsFile: Could not find exports file! /etc/exports doesn't exist. Configure it in share/config/knfsshare, [General], exportsFile=....                               
cantor(5771)/kio (KDirListerCache) KDirListerCache::slotResult: finished listing KUrl("file:///home/raffaele/Documenti")                                                                                                  
cantor(5771)/kio (KDirListerCache) KDirListerCache::forgetDirs: KDirLister(0x9224248)  item moved into cache:  KUrl("file:///home/raffaele/Documenti")                                                                    
cantor(5771)/kio (KDirListerCache) KDirListerCache::listDir: Listing directory: KUrl("file:///home/raffaele/Documenti/Cantor")                                                                                            
cantor(5771)/kio (KDirListerCache) KDirListerCache::slotResult: finished listing KUrl("file:///home/raffaele/Documenti/Cantor")                                                                                           
cantor(5771)/kio (KDirListerCache) KDirListerCache::forgetDirs: KDirLister(0x9224248)  item moved into cache:  KUrl("file:///home/raffaele/Documenti/Cantor")                                                             
cantor(5771)/kio (KDirListerCache) KDirListerCache::forgetDirs: KDirLister(0x9608738)  item moved into cache:  KUrl("trash:/")                                                                                            
cantor(5771)/kdecore (KLibrary) findLibraryInternal: plugins should not have a 'lib' prefix: "libcantorpart.so"                                                                                                           
cantor(5771)/kdecore (KLibrary) kde4Factory: The library "/usr/lib/kde4/libcantorpart.so" does not offer a qt_plugin_instance function.
cantor(5771) CantorPart::CantorPart: Created a CantorPart
Calling appendChild() on a null node does nothing.
cantor(5771) Worksheet::load: read:  "<!DOCTYPE CantorWorksheet>
<Worksheet backend="Maxima">
 <Expression>
  <Command>x : 2</Command>
  <Result type="latex" filename="Vr3991.eps">\begin{eqnarray*}2\end{eqnarray*}</Result>
 </Expression>
 <Expression>
  <Command>x^2</Command>
  <Result type="latex" filename="cH3991.eps">\begin{eqnarray*}4\end{eqnarray*}</Result>
 </Expression>
</Worksheet>
"
cantor(5771) Worksheet::load: "Worksheet"
cantor(5771) MaximaBackend::createSession: Spawning a new Maxima session
cantor(5771) MaximaSession::MaximaSession:
KCrash: Application 'cantor' crashing...
sock_file=/home/raffaele/.kde/socket-Climax/kdeinit4__0

[1]+  Fermato                 cantor
Comment 5 Alexander Rieder 2010-02-08 01:01:28 UTC
ok, I think I know what is going wrong, and commited fixes to trunk and 4.4 branch, but I'm not sure if it will make it into 4.4.0, so you might have to wait for 4.4.1 to get it (or build cantor yourself).

Please close this bug once you can verify that the fix works.
Comment 6 Nicolas L. 2010-08-19 13:34:56 UTC
is this bug still valid in kde 4.4.5 or 4.5 ?
Comment 7 Alexander Semke 2016-10-23 18:15:36 UTC
Git commit 4ed136409c34ee699f0117d54c267931c8d2b952 by Alexander Semke.
Committed on 23/10/2016 at 18:15.
Pushed by asemke into branch 'master'.

Don't crash when loading a file in an unmodified worksheet.

M  +11   -19   src/worksheet.cpp

http://commits.kde.org/cantor/4ed136409c34ee699f0117d54c267931c8d2b952