Don't crash when loading a file in an unmodified worksheet.

BUG: 225733